# trabalho-final-ga020-2026-JairsonAlbertoSami

./: .gitignore  LICENSE  README.md  pixi.toml
voids/: .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  mkdocs.yml  pixi.toml  pyproject.toml  spec_v0_1.md
voids/.github/: pull_request_template.md
voids/docs/: AGENTS.md  background.md  concepts.md  development.md  examples.md  fem_solver_backends.md  getting_started.md  image_segmentation_network_extraction.md  index.md  local_thickness_morphometry.md  map_based_singlephase_solvers.md  porosity_maps.md  synthetic_cases.md  workflow.md
voids/notebooks/: 01_mwe_singlephase_porosity_perm.ipynb  01_mwe_singlephase_porosity_perm.py  02_mwe_openpnm_crosscheck_optional.ipynb  02_mwe_openpnm_crosscheck_optional.py  03_mwe_pyvista_visualization.ipynb  03_mwe_pyvista_visualization.py  04_mwe_manufactured_porespy_extraction.ipynb  04_mwe_manufactured_porespy_extraction.py  05_mwe_cartesian_mesh_network.ipynb  05_mwe_cartesian_mesh_network.py  06_mwe_real_porespy_extraction.ipynb  06_mwe_real_porespy_extraction.py  07_mwe_synthetic_vug_case.ipynb  07_mwe_synthetic_vug_case.py  08_mwe_image_based_vug_shape_sensitivity.ipynb  08_mwe_image_based_vug_shape_sensitivity.py  09_mwe_image_based_vug_sensitivity_2d.ipynb  09_mwe_image_based_vug_sensitivity_2d.py  10_mwe_lattice_based_vug_sensitivity.ipynb  10_mwe_lattice_based_vug_sensitivity.py  11_mwe_lattice_based_vug_sensitivity_2d.ipynb  11_mwe_lattice_based_vug_sensitivity_2d.py  12_mwe_synthetic_volume_openpnm_benchmark.ipynb  12_mwe_synthetic_volume_openpnm_benchmark.py  13_mwe_synthetic_volume_xlb_benchmark.ipynb  13_mwe_synthetic_volume_xlb_benchmark.py  14_mwe_shape_factor_conductance_comparison.ipynb  14_mwe_shape_factor_conductance_comparison.py  15_mwe_external_pnflow_benchmark.ipynb  15_mwe_external_pnflow_benchmark.py  16_mwe_viscosity_model_kabs_benchmark.ipynb  16_mwe_viscosity_model_kabs_benchmark.py  17_mwe_solver_options_benchmark.ipynb  17_mwe_solver_options_benchmark.py  18_mwe_drp317_berea_raw_porosity_perm.py  19_mwe_drp317_bentheimer_raw_porosity_perm.py  20_mwe_drp317_banderagray_raw_porosity_perm.py  21_mwe_drp317_banderabrown_raw_porosity_perm.py  22_mwe_drp317_bereasistergray_raw_porosity_perm.py  23_mwe_drp317_bereauppergray_raw_porosity_perm.py  (+37 more)
voids/notebooks_final_00/: TESte_Geral.ipynb  fina_note.ipynb  pore_scale_utils.py  validacao_solver.ipynb
voids/scripts/: bump_version.py  sync_deps.py  sync_notebooks.py
voids/tests/: conftest.py  test_bc.py  test_benchmark_segmented_volume.py  test_benchmark_xlb.py  test_bump_version.py  test_connectivity.py  test_core_and_utils.py  test_crosscheck_roundtrip.py  test_demo_examples.py  test_fvm_tpfa.py  (+36 more)
(+215 files in other folders)
