[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "voids"
version = "0.1.11"
description = "Scientific Python package for digital porous media research"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-2.1-only" }
authors = [
  { name = "Diego Volpatto", email = "volpatto@lncc.br" }
]
keywords = [
  "pore-network-modeling",
  "pnm",
  "porous-media",
  "digital-rock",
  "permeability",
  "finite-volume",
  "finite-element",
  "lattice-boltzmann",
  "scientific-computing",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy",
  "scipy",
  "edt>=3.0",
  "numba>=0.60",
  "scikit-image>=0.22",
  "tifffile>=2023.8",
  "h5py>=3.10",
  "typing_extensions>=4.10",
  "plotly>=5.0",
  "porespy>=2.4",
  "openpnm>=3.6,<3.7",
  "pyvista>=0.43",
  "meshio>=5.3",
  "mkl>=2023; sys_platform == 'linux'",
  "pypardiso>=0.4; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "ipython>=8.0",
  "jupyterlab>=4.0",
  "jupytext>=1.19.1,<2",
  "pandas>=3.0.1,<4",
]
notebooks = [
  "ipython>=8.0",
  "jupyterlab>=4.0",
  "jupytext>=1.19.1,<2",
]
viz = [
  "vtk==9.*",
  "trame==3.*",
  "matplotlib>=3.8",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-regressions>=2.8",
  "networkx>=3.2",
  "diff-cover",
]
lbm = [
  "xlb>=0.3,<0.4",
  "jax>=0.8,<0.10",
]
thermo = [
  "CoolProp>=6.6",
  "thermo>=0.6.0, <0.7",
]
solvers = [
  "scikit-umfpack",
  "pyamg>=5.3",
]
[project.urls]
Homepage = "https://github.com/geomech-project/voids"
Documentation = "https://geomech-project.github.io/voids/"
Repository = "https://github.com/geomech-project/voids"
Issues = "https://github.com/geomech-project/voids/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/voids"]

[tool.hatch.build.targets.sdist]
exclude = [
  "examples/data/**",
  "notebooks/**",
  "docs/**",
]

[tool.setuptools]
# map the “root” of all your packages to src/
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# look under src/ for any packages matching "voids*"
where  = ["src"]
include = ["voids*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = [
    '@(?:numba\.)?(?:njit|jit|vectorize|guvectorize)\b',
]
